<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for <xliff:g id="discoverable_time_period">%1$s</xliff:g> seconds\u2026</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">
      Prevent use of the bluetooth dialer when the screen is locked
    </string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="sound_settings">Sound settings</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="silent_mode_summary">Silence all sounds except media &amp; alarms</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="ringtone_summary">""</string>
    <string name="all_volume_title">Volume</string>
    <string name="ring_volume_title">Ringer volume</string>
    <string name="ring_volume_summary">""</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Vibration feedback for calls and notifications</string>
    <string name="notification_sound_title">Notification ringtone</string>
    <string name="notification_sound_summary">""</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_pulse_summary">Pulse trackball light repeatedly for new notifications</string>
    <string name="notification_sound_dialog_title">Select notification ringtone</string>
    <string name="media_volume_title">Media</string>
    <string name="media_volume_summary">Set volume for music and videos</string>
    <string name="dtmf_tone_enable_title">Audible touch tones</string>
    <string name="dtmf_tone_enable_summary_on">Play tones when using dial pad</string>
    <string name="dtmf_tone_enable_summary_off">Play tones when using dial pad</string>
    <string name="sound_effects_enable_title">Audible selection</string>
    <string name="sound_effects_enable_summary_on">Play sound when making screen selection</string>
    <string name="sound_effects_enable_summary_off">Play sound when making screen selection</string>
    <string name="haptic_feedback_enable_title">Haptic feedback</string>
    <string name="haptic_feedback_enable_summary_on">Vibrate when pressing soft keys and on certain UI interactions</string>
    <string name="haptic_feedback_enable_summary_off">Vibrate when pressing soft keys and on certain UI interactions</string>
    <string name="display_settings">Display settings</string>
    <string name="animations_title">Animation</string>
    <string name="animations_summary_on">Show animation when opening &amp; closing windows</string>
    <string name="animations_summary_off">Show animation when opening &amp; closing windows</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="accelerometer_summary_on">Switch orientation automatically when rotating phone</string>
    <string name="accelerometer_summary_off">Switch orientation automatically when rotating phone</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_summary">Adjust the brightness of the screen</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="internal_memory">Internal phone storage</string>
    <string name="sd_memory">SD card</string>
    <string name="memory_available">Available space</string>
    <string name="memory_size">Total space</string>
    <string name="sd_eject">Unmount SD card</string>
    <string name="sd_eject_summary">Unmount the SD card for safe removal</string>
    <string name="sd_format">Format SD card</string>
    <string name="sd_format_summary">Format (erase) the SD card</string>
    <string name="apn_edit">Edit access point</string>
    <string name="apn_name">Name</string>
    <string name="apn_apn">APN</string>
    <string name="apn_http_proxy">Proxy</string>
    <string name="apn_http_port">Port</string>
    <string name="apn_user">Username</string>
    <string name="apn_password">Password</string>
    <string name="apn_server">Server</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mms_proxy">MMS proxy</string>
    <string name="apn_mms_port">MMS port</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mnc">MNC</string>
    <string name="apn_type">APN type</string>
    <string name="master_clear_title">Factory data reset</string>
    <string name="master_clear_summary">Erases all data on phone</string>
    <string name="manageapplications_settings_title">Manage applications</string>
    <string name="manageapplications_settings_summary">Manage and remove installed applications</string>
    <string name="applications_settings_summary">Manage applications, set up quick launch shortcuts</string>
    <string name="applications_settings_header">Application settings</string>
    <string name="install_applications">Unknown sources</string>
    <string name="install_unknown_applications">Allow installation of non-Market applications</string>
    <string name="app_install_location_title">Preferred install location</string>
    <string name="app_install_location_summary">Change the preferred installation location for new applications.</string>
    <string name="storageuse_settings_title">Storage use</string>
    <string name="storageuse_settings_summary">View storage used by applications</string>
    <string name="runningservices_settings_title">Running services</string>
    <string name="runningservices_settings_summary">View and control currently running services</string>
    <string name="language_settings">Language &amp; keyboard</string>
    <string name="text_category">Text settings</string>
    <string name="phone_language">Select language</string>
    <string name="phone_language_summary">""</string>
    <string name="auto_replace">Auto-replace</string>
    <string name="auto_replace_summary">Correct mistyped words</string>
    <string name="auto_caps">Auto-cap</string>
    <string name="auto_caps_summary">Capitalize first letter in sentences</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="hardkeyboard_category">Physical keyboard settings</string>
    <string name="auto_punctuate_summary">Press Space key twice to insert \u0022.\u0022</string>
    <string name="user_dict_settings_title">User dictionary</string>
    <string name="user_dict_settings_summary">""</string>
    <string name="quick_launch_title">Quick launch</string>
    <string name="quick_launch_summary">Set keyboard shortcuts to launch applications</string>
    <string name="input_methods_settings_title">Text input</string>
    <string name="input_methods_settings_summary">Manage text input options</string>
    <string name="development_settings_title">Development</string>
    <string name="development_settings_summary">Set options for application development</string>
    <string name="power_usage_summary_title">Battery use</string>
    <string name="power_usage_summary">What has been using the battery</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="emergency_tone_summary">Set behavior when an emergency call is placed</string>
</resources>